exports[`AI errors: missing key, no profiles, HTTP error message 1`] = `
{
  "missingKey": {
    "success": false,
    "message": "Chưa cấu hình API Key. Vui lòng vào tab Cài đặt để nhập key."
  },
  "noProfiles": {
    "success": false,
    "message": "Chưa có cấu hình AI. Vào tab Cài đặt → Cấu hình AI để thêm."
  },
  "openAi401": {
    "success": false,
    "message": "API (401): Invalid API key"
  },
  "gemini429": {
    "success": false,
    "message": "Gemini API (429): Quota exceeded"
  }
}
`;

exports[`AI request: custom_bare_host 1`] = `
{
  "request": [
    {
      "url": "https://api.example.com/v1/chat/completions",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json",
        "Authorization": "Bearer k"
      },
      "body": {
        "model": "m",
        "messages": [
          {
            "role": "system",
            "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
          },
          {
            "role": "user",
            "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
          }
        ],
        "temperature": 0,
        "stream": false
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: custom_default_endpoint 1`] = `
{
  "request": [
    {
      "url": "http://localhost:20128/v1/chat/completions",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json"
      },
      "body": {
        "model": "local-model",
        "messages": [
          {
            "role": "system",
            "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
          },
          {
            "role": "user",
            "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
          }
        ],
        "temperature": 0,
        "stream": false
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: custom_full_path 1`] = `
{
  "request": [
    {
      "url": "https://api.example.com/v1/chat/completions",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json",
        "Authorization": "Bearer k"
      },
      "body": {
        "model": "m",
        "messages": [
          {
            "role": "system",
            "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
          },
          {
            "role": "user",
            "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
          }
        ],
        "temperature": 0,
        "stream": false
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: custom_gemini_endpoint 1`] = `
{
  "request": [
    {
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-x:generateContent?key=AIzaK",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json"
      },
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
              }
            ]
          }
        ],
        "generationConfig": {
          "temperature": 0
        },
        "systemInstruction": {
          "parts": [
            {
              "text": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
            }
          ]
        }
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: deepseek 1`] = `
{
  "request": [
    {
      "url": "https://api.deepseek.com/v1/chat/completions",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json",
        "Authorization": "Bearer sk-ds"
      },
      "body": {
        "model": "deepseek-chat",
        "messages": [
          {
            "role": "system",
            "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
          },
          {
            "role": "user",
            "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
          }
        ],
        "temperature": 0,
        "stream": false
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: gemini_custom_base 1`] = `
{
  "request": [
    {
      "url": "https://proxy.example.com/v1beta/models/gemini-2.0-flash:generateContent?key=AIzaKEY",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json"
      },
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
              }
            ]
          }
        ],
        "generationConfig": {
          "temperature": 0
        },
        "systemInstruction": {
          "parts": [
            {
              "text": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
            }
          ]
        }
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: gemini_default 1`] = `
{
  "request": [
    {
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=AIzaKEY",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json"
      },
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
              }
            ]
          }
        ],
        "generationConfig": {
          "temperature": 0
        },
        "systemInstruction": {
          "parts": [
            {
              "text": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
            }
          ]
        }
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: gemini_prefixed_model 1`] = `
{
  "request": [
    {
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-pro:generateContent?key=AIzaKEY",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json"
      },
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
              }
            ]
          }
        ],
        "generationConfig": {
          "temperature": 0
        },
        "systemInstruction": {
          "parts": [
            {
              "text": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
            }
          ]
        }
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: inception_invalid_reasoning_ignored 1`] = `
{
  "request": [
    {
      "url": "https://api.inceptionlabs.ai/v1/chat/completions",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json",
        "Authorization": "Bearer ik"
      },
      "body": {
        "model": "mercury-2.5",
        "messages": [
          {
            "role": "system",
            "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
          },
          {
            "role": "user",
            "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
          }
        ],
        "temperature": 0.5,
        "stream": false
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: inception_reasoning 1`] = `
{
  "request": [
    {
      "url": "https://api.inceptionlabs.ai/v1/chat/completions",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json",
        "Authorization": "Bearer ik"
      },
      "body": {
        "model": "mercury-2.5",
        "messages": [
          {
            "role": "system",
            "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
          },
          {
            "role": "user",
            "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
          }
        ],
        "temperature": 0.5,
        "stream": false,
        "reasoning_effort": "instant"
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: legacy single-provider settings (before aiProfiles migration) 1`] = `
{
  "request": [
    {
      "url": "https://api.deepseek.com/v1/chat/completions",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json",
        "Authorization": "Bearer sk-legacy"
      },
      "body": {
        "model": "deepseek-reasoner",
        "messages": [
          {
            "role": "system",
            "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
          },
          {
            "role": "user",
            "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
          }
        ],
        "temperature": 0,
        "stream": false
      }
    }
  ],
  "response": {
    "success": true,
    "index": 2,
    "answerText": "Đà Nẵng",
    "rawResult": "{\\"index\\": 2}"
  }
}
`;

exports[`AI request: ollama_no_key 1`] = `
{
  "request": [
    {
      "url": "http://localhost:11434/v1/chat/completions",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json"
      },
      "body": {
        "model": "llama3.2",
        "messages": [
          {
            "role": "system",
            "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
          },
          {
            "role": "user",
            "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
          }
        ],
        "temperature": 0,
        "stream": false
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: openai 1`] = `
{
  "request": [
    {
      "url": "https://api.openai.com/v1/chat/completions",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json",
        "Authorization": "Bearer sk-test"
      },
      "body": {
        "model": "gpt-4o",
        "messages": [
          {
            "role": "system",
            "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
          },
          {
            "role": "user",
            "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
          }
        ],
        "temperature": 0,
        "stream": false
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: openai_default_model 1`] = `
{
  "request": [
    {
      "url": "https://api.openai.com/v1/chat/completions",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json",
        "Authorization": "Bearer sk-test"
      },
      "body": {
        "model": "gpt-4o-mini",
        "messages": [
          {
            "role": "system",
            "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
          },
          {
            "role": "user",
            "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
          }
        ],
        "temperature": 0,
        "stream": false
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: openrouter_headers 1`] = `
{
  "request": [
    {
      "url": "https://openrouter.ai/api/v1/chat/completions",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json",
        "Authorization": "Bearer sk-or-v1-x",
        "HTTP-Referer": "https://edux.cmcu.edu.vn",
        "X-Title": "EDUX Slayers"
      },
      "body": {
        "model": "google/gemini-2.0-flash-001",
        "messages": [
          {
            "role": "system",
            "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
          },
          {
            "role": "user",
            "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
          }
        ],
        "temperature": 0,
        "stream": false
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: reasoning_ignored_for_openai 1`] = `
{
  "request": [
    {
      "url": "https://api.openai.com/v1/chat/completions",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json",
        "Authorization": "Bearer sk"
      },
      "body": {
        "model": "o3",
        "messages": [
          {
            "role": "system",
            "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
          },
          {
            "role": "user",
            "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
          }
        ],
        "temperature": 0,
        "stream": false
      }
    }
  ],
  "response": {
    "success": true,
    "index": 1,
    "answerText": "Hà Nội",
    "rawResult": "{\\"index\\": 1}"
  }
}
`;

exports[`AI request: retries once without reasoning_effort when the server rejects it 1`] = `
{
  "bodies": [
    {
      "model": "mercury-2",
      "messages": [
        {
          "role": "system",
          "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
        },
        {
          "role": "user",
          "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
        }
      ],
      "temperature": 0.5,
      "stream": false,
      "reasoning_effort": "high"
    },
    {
      "model": "mercury-2",
      "messages": [
        {
          "role": "system",
          "content": "Bạn là chuyên gia giáo dục và bài giảng học tập với độ chính xác tuyệt đối.\\nNhiệm vụ: Phân tích kỹ lưỡng câu hỏi và chọn duy nhất 1 đáp án chính xác nhất trong các lựa chọn được cung cấp.\\nĐịnh dạng đầu ra BẮT BUỘC là JSON duy nhất: {\\"index\\": X} trong đó X là số thứ tự (từ 0 đến 2) của lựa chọn đúng nhất.\\nTuyệt đối không giải thích, không viết thêm bất kỳ chữ nào ngoài chuỗi JSON."
        },
        {
          "role": "user",
          "content": "Câu hỏi bài giảng:\\nThủ đô Việt Nam?\\n\\nCác lựa chọn:\\n0. Huế\\n1. Hà Nội\\n2. Đà Nẵng\\n\\nHãy chọn đáp án đúng nhất (trả về JSON dạng {\\"index\\": X}):"
        }
      ],
      "temperature": 0.5,
      "stream": false
    }
  ],
  "response": {
    "success": true,
    "index": 2,
    "answerText": "Đà Nẵng",
    "rawResult": "{\\"index\\": 2}"
  }
}
`;

exports[`exam: request and fenced answer cleanup 1`] = `
{
  "request": [
    {
      "url": "https://api.openai.com/v1/chat/completions",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json",
        "Authorization": "Bearer sk"
      },
      "body": {
        "model": "gpt-4o",
        "messages": [
          {
            "role": "system",
            "content": "Bạn là chuyên gia khảo thí và học thuật cao cấp hàng đầu, có độ chính xác tuyệt đối 100% trong việc giải quyết các bài kiểm tra trắc nghiệm, đúng/sai, điền khuyết và tự luận.\\nYêu cầu:\\n1. Phân tích cẩn thận từng câu hỏi và các lựa chọn loại trừ để chọn phương án đúng tuyệt đối.\\n2. Trả về JSONL một dòng duy nhất (hoặc JSON Array các object);\\n3. Mỗi phần tử có \\"so_cau\\" và \\"dap_an\\";\\n4. \\"dap_an\\" là A/B/C/D hoặc từ/cụm từ cần điền;\\n5. Với câu đúng/sai, \\"dap_an\\" là mảng giá trị Đúng/Sai theo thứ tự từng mệnh đề (ví dụ: [true, false, true, true]);\\n6. Tuyệt đối không thêm lời dẫn hay giải thích."
          },
          {
            "role": "user",
            "content": "ĐỀ BÀI"
          }
        ],
        "temperature": 0,
        "stream": false
      }
    }
  ],
  "response": {
    "success": true,
    "answersText": "[{\\"so_cau\\": 1, \\"dap_an\\": \\"A\\"}]"
  }
}
`;

exports[`laya: connection failure message 1`] = `
{
  "success": false,
  "message": "Không kết nối được Laya tại http://localhost:8000. Hãy chạy \\"laya-serve\\" trước."
}
`;

exports[`laya: health and ranked solve 1`] = `
{
  "request": [
    {
      "url": "http://127.0.0.1:9000/health",
      "method": "GET",
      "headers": {
        "Content-Type": "application/json",
        "Authorization": "Bearer secret"
      }
    },
    {
      "url": "http://127.0.0.1:9000/v1/systemone",
      "method": "POST",
      "headers": {
        "Content-Type": "application/json",
        "Authorization": "Bearer secret"
      },
      "body": {
        "state": "Q?",
        "model": "multilingual",
        "questions": {
          "answer": {
            "type": "choice",
            "instructions": "Which option correctly answers the question?",
            "criteria": [
              "Huế",
              "Hà Nội",
              "Hà Nội (3)"
            ]
          }
        }
      }
    }
  ],
  "health": {
    "success": true,
    "loaded": [
      "multilingual"
    ],
    "device": "cpu"
  },
  "solve": {
    "success": true,
    "index": 1,
    "ranking": [
      1,
      2,
      0
    ],
    "probabilities": [
      0.7,
      0.2,
      0.1
    ],
    "elapsedMs": 42,
    "model": "multilingual"
  }
}
`;

exports[`slide answer parsing: digit_fallback 1`] = `
{
  "success": true,
  "index": 1,
  "answerText": "Hà Nội",
  "rawResult": "Đáp án đúng là 1 vì ..."
}
`;

exports[`slide answer parsing: fenced 1`] = `
{
  "success": true,
  "index": 2,
  "answerText": "Đà Nẵng",
  "rawResult": "{\\"index\\": 2}"
}
`;

exports[`slide answer parsing: out_of_range 1`] = `
{
  "success": false,
  "message": "Không phân tích được chỉ số đáp án từ kết quả AI: {\\"index\\": 7}"
}
`;

exports[`slide answer parsing: reasoning_content_only 1`] = `
{
  "success": true,
  "index": 2,
  "answerText": "Đà Nẵng",
  "rawResult": "{\\"index\\": 2}"
}
`;

exports[`slide answer parsing: sse_stream 1`] = `
{
  "success": true,
  "index": 1,
  "answerText": "Hà Nội",
  "rawResult": "{\\"index\\": 1}"
}
`;

exports[`slide answer parsing: string_index 1`] = `
{
  "success": true,
  "index": 0,
  "answerText": "Huế",
  "rawResult": "{\\"index\\": \\"0\\"}"
}
`;

exports[`slide answer parsing: text_match 1`] = `
{
  "success": true,
  "index": 1,
  "answerText": "Hà Nội",
  "rawResult": "Hà Nội"
}
`;

exports[`slide answer parsing: unparseable 1`] = `
{
  "success": false,
  "message": "Không phân tích được chỉ số đáp án từ kết quả AI: Tôi không biết"
}
`;

exports[`slide: rejects missing question/choices without calling the API 1`] = `
{
  "success": false,
  "message": "Dữ liệu câu hỏi hoặc lựa chọn không hợp lệ"
}
`;
